apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__inline_values.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: "&generated"
---
result:
  statsReportKey: "# InlineInputTypeQuery\nquery InlineInputTypeQuery{inputTypeQuery(input:{}){enumResponse}}"
  referencedFieldsByType:
    EverythingResponse:
      fieldNames:
        - enumResponse
      isInterface: false
    Query:
      fieldNames:
        - inputTypeQuery
      isInterface: false
