apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__mutation_comma@report.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: generated
---
result:
  statsReportKey: "# Test_Mutation_Comma\nmutation Test_Mutation_Comma($arg1withalongnamegoeshere012345678:Boolean){mutation2(id:\"\"){updateCheckConfiguration(arg1:$arg1withalongnamegoeshere012345678,arg2:false)}}"
  referencedFieldsByType:
    Mutation:
      fieldNames:
        - mutation2
      isInterface: false
    TestGraphResponse2:
      fieldNames:
        - updateCheckConfiguration
      isInterface: false
