apollo-router/src/apollo_studio_interop/snapshots/apollo_router__apollo_studio_interop__tests__mutation_space@report.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
expression: generated
---
result:
  statsReportKey: "# Test_Mutation_Space\nmutation Test_Mutation_Space($arg1withalongnamegoeshere0123456789:Boolean){mutation2(id:\"\"){updateCheckConfiguration(arg1:$arg1withalongnamegoeshere0123456789 arg2:false)}}"
  referencedFieldsByType:
    Mutation:
      fieldNames:
        - mutation2
      isInterface: false
    TestGraphResponse2:
      fieldNames:
        - updateCheckConfiguration
      isInterface: false
